--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 		<section>
 			<div class="top">
 				<div class="avatar">
-					<img src="img/heath.png" alt="">
+					<img src="img/avt.png" alt="">
+				</div>
+				<div class="info">
 					<h3>Nguyễn Văn Bảy</h3>
 					<p>Nullam, Dictum</p>
 				</div>
-				<button type="">FOLLOW</button>
-				<img src="img/icon.png" alt="">
+				<div class="btn">
+					<button type="">FOLLOW</button>
+					<img src="img/icon.png" alt="">
+				</div>
 			</div>
 			<div class="container">
 				<img src="img/camera.png" alt="">
@@ -40,7 +44,7 @@
 		</section>
 
 		<footer>
-			DESIGNED BY FREEPIK
+			<p>DESIGNED BY FREEPIK</p>
 		</footer>
 	</div>
 </body>
